# CrewAIX

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
config/: rules.yaml
content/: crew_roles.md  ideas.md  ideas_source.md  tweet_types.md  tweets.md
scripts/: post_to_bluesky.py  prepare_ideas_source.py  update_ideas_from_skill.py
src/: main.py
src/crewx/: config.py  crew_pipeline.py  embeddings.py  errors.py  filters.py  io.py  llm.py  logging_utils.py  parsing.py  pipeline.py  prompts.py  prompts_pipeline.py  retry.py  rules.py
tests/: test_filters.py  test_parsing.py  test_prompts_pipeline.py  test_retry.py
tests/snapshots/: generator_prompt.txt
